--- a/index.html
+++ b/index.html
@@ -8,16 +8,59 @@
     </head>
 
     <body>
+        <!--Navigation-->
         <header>
-            <section>
-
-            </section>
+            <h1>Jennifer Jennings</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#About Me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#My Work">My Work</a>
+                    </li>
+                    <li>
+                        <a href="Resume">Resume</a>
+                    </li>
+                    <li>
+                        <a href="#Contact Me">Contact Me</a>
+                    </li>
+                </ul>
+            </nav>
         </header> 
+        <!--About me section with photo-->
+        <section id="About Me">
+            <h2 class="section-title">About Me</h2>
+            <img src="" alt="Photo of Jennifer Jennings in business attire">
+            <div>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque natus, ex deserunt tempora ab consequuntur totam! Maxime qui modi ipsa doloremque iste fuga assumenda vel quia veritatis inventore, eaque eligendi.
+            </div>
+        </section>
+
+        <section id="My Work">
+            <h2 class="section-title">My Work</h2>
+            <!--Tiles with my work-->
+        </section>
+        <section id="Resume">
+
+        </section>
     </body>
 
-    <footer>
+    <section id="Contact Me">
+        <h2 class="section-title"> Contact Me</h2>
+        <ul>
+            <li>
+                Phone Number: <a href="tel:210.912.9164">210.912.9164</a>
+            </li>
+            <li>
+                Email: <a href="mailto:jennjenn93@gmail.com">jennjenn93@gmail.com</a>
+            </li>
+            <li>
+                Linkdin: <a href="https://www.linkedin.com/in/jennifer-jennings-728018a3">Linkdin Proflie</a>
+            </li>
+        </ul>
 
-    </footer>
+    </section>
 
 
 
