header & section headings

--- a/index.html
+++ b/index.html
@@ -14,40 +14,37 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#About Me">About Me</a>
+                        <a href="#about-me">About Me</a>
                     </li>
                     <li>
-                        <a href="#My Work">My Work</a>
+                        <a href="#my-work">My Work</a>
                     </li>
                     <li>
-                        <a href="Resume">Resume</a>
-                    </li>
-                    <li>
-                        <a href="#Contact Me">Contact Me</a>
+                        <a href="#contact-me">Contact Me</a>
                     </li>
                 </ul>
             </nav>
         </header> 
         <!--About me section with photo-->
-        <section id="About Me">
-            <h2 class="section-title">About Me</h2>
-            <img src="" alt="Photo of Jennifer Jennings in business attire">
+        <section id="about-me">
+            <h2 class="section-title left">About Me</h2>
+            <img src="assets\Images\IMG_8477.jpg" alt="Photo of Jennifer Jennings">
             <div>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque natus, ex deserunt tempora ab consequuntur totam! Maxime qui modi ipsa doloremque iste fuga assumenda vel quia veritatis inventore, eaque eligendi.
             </div>
         </section>
 
-        <section id="My Work">
-            <h2 class="section-title">My Work</h2>
+        <section id="my-work">
+            <h2 class="section-title right">My Work</h2>
             <!--Tiles with my work-->
         </section>
-        <section id="Resume">
+        <section id="resume">
 
         </section>
     </body>
 
-    <section id="Contact Me">
-        <h2 class="section-title"> Contact Me</h2>
+    <section id="contact-me">
+        <h2 class="section-title left"> Contact Me</h2>
         <ul>
             <li>
                 Phone Number: <a href="tel:210.912.9164">210.912.9164</a>
