about me section

--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
         </header> 
         <!--About me section with photo-->
         <section id="about-me">
-            <h2 class="section-title left">About Me</h2>
+            <h2 class="section-title">About Me</h2>
             <img src="assets\Images\IMG_8477.jpg" alt="Photo of Jennifer Jennings">
             <div>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque natus, ex deserunt tempora ab consequuntur totam! Maxime qui modi ipsa doloremque iste fuga assumenda vel quia veritatis inventore, eaque eligendi.
+                I am a hard worker who loves learning new things! I recently decided to make a career change from teaching into coding and am loving it! I have experience running meetings and planning with teams to comlete the tasks at hand. 
+                On a personal note, I love hiking and exploring new places. My dog Bailey is always along for the ride when she can be!
             </div>
         </section>
 
         <section id="my-work">
-            <h2 class="section-title right">My Work</h2>
+            <h2 class="section-title">My Work</h2>
             <!--Tiles with my work-->
         </section>
         <section id="resume">
@@ -44,7 +45,7 @@
     </body>
 
     <section id="contact-me">
-        <h2 class="section-title left"> Contact Me</h2>
+        <h2 class="section-title"> Contact Me</h2>
         <ul>
             <li>
                 Phone Number: <a href="tel:210.912.9164">210.912.9164</a>
