my work formatting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2 class="section-title">About Me</h2>
             <img src="assets\Images\IMG_8477.jpg" alt="Photo of Jennifer Jennings">
             <div>
-                I am a hard worker who loves learning new things! I recently decided to make a career change from teaching into coding and am loving it! I have experience running meetings and planning with teams to comlete the tasks at hand. 
+                Hello! My name is Jennifer Jennings and I am thrilled to get into the world of coding and technology! I am a hard worker who loves learning new things! I recently decided to make a career change from teaching into coding and am loving it! I have experience running meetings and planning with teams to comlete the tasks at hand. 
                 On a personal note, I love hiking and exploring new places. My dog Bailey is always along for the ride when she can be!
             </div>
         </section>
@@ -38,10 +38,23 @@
         <section id="my-work">
             <h2 class="section-title">My Work</h2>
             <!--Tiles with my work-->
+            <div>
+                <article class="large-tile">
+                    <a href="https://jen2ags.github.io/run-buddy/">
+                        <img src="assets\images\run-buddy.png" alt="">
+                    </a>
+                </article>
+                <article class="small-tiles">
+                    <a href="https://jen2ags.github.io/robot-gladiators/">
+                        <img src="assets\images\robot-gladiators.png" alt="">
+                    </a>
+                    <a href="https://jen2ags.github.io/Module-01-Challenge/">
+                        <img src="assets\images\challenge-01.png" alt="">
+                    </a>
+                </article>
+            </div>
         </section>
-        <section id="resume">
-
-        </section>
+      
     </body>
 
     <section id="contact-me">
