--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <div>
                 <article class="large-tile">
                     <a href="https://jen2ags.github.io/run-buddy/">
-                        <img src="assets\images\run-buddy.png" alt="">
+                        <img src="assets\Images\run-buddy.png" alt="">
                     </a>
                 </article>
                 <article class="small-tiles">
                     <a href="https://jen2ags.github.io/robot-gladiators/">
-                        <img src="assets\images\robot-gladiators.png" alt="">
+                        <img src="assets\Images\robot-gladiators.png" alt="">
                     </a>
                     <a href="https://jen2ags.github.io/Module-01-Challenge/">
-                        <img src="assets\images\challenge-01.png" alt="">
+                        <img src="assets\Images\challenge-01.png" alt="">
                     </a>
                 </article>
             </div>
