--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--About me section with photo-->
         <section id="about-me">
             <h2 class="section-title">About Me</h2>
-            <img src="assets\images\IMG_8477.jpg" alt="Photo of Jennifer Jennings">
+            <img src="assets\Images\IMG_8477.jpg" alt="Photo of Jennifer Jennings">
             <div>
                 Hello! My name is Jennifer Jennings and I am thrilled to get into the world of coding and technology! I am a hard worker who loves learning new things! I recently decided to make a career change from teaching into coding and am loving it! I have experience running meetings and planning with teams to comlete the tasks at hand. 
                 On a personal note, I love hiking and exploring new places. My dog Bailey is always along for the ride when she can be!
