--- a/index.html
+++ b/index.html
@@ -41,17 +41,24 @@
             <!--Tiles with my work-->
             <div>
                 <article class="large-tile">
-                    <a href="https://jen2ags.github.io/run-buddy/">
-                        <img src="assets\images\run-buddy.png" alt="">
+                    <a href="https://jen2ags.github.io/Karaoke-Kings/">
+                        <img src="assets\images\Karaoke-kings screenshot.png" alt="">
                     </a>
                 </article>
                 <article class="small-tiles">
+                    <a href="https://jen2ags.github.io/Work-day-scheduler/">
+                        <img src="assets\images\work-day-scheduler screenshot.png" alt="">
+                    </a>
+                    <a href="https://jen2ags.github.io/run-buddy/">
+                        <img src="assets\images\run-buddy.png" alt="">
+                    </a>
                     <a href="https://jen2ags.github.io/robot-gladiators/">
                         <img src="assets\images\robot-gladiators.png" alt="">
                     </a>
                     <a href="https://jen2ags.github.io/Module-01-Challenge/">
                         <img src="assets\images\challenge-01.png" alt="">
                     </a>
+                    
                 </article>
             </div>
         </section>
