--- a/index.html
+++ b/index.html
@@ -42,15 +42,23 @@
             <div>
                 <article class="large-tile">
                     <a href="https://jen2ags.github.io/Karaoke-Kings/">
-                        <img src="assets\images\Karaoke-kings screenshot.png" alt="">
+                        <img src="assets\images\Karaoke-kings screenshot.png" alt="" width="400" height="400">
                     </a>
                 </article>
                 <article class="small-tiles">
                     <a href="https://jen2ags.github.io/Work-day-scheduler/">
-                        <img src="assets\images\work-day-scheduler screenshot.png" alt="">
+                        <img src="assets\images\work-day-scheduler screenshot.png" alt=""  width="500" height="400">
                     </a>
                     <a href="https://jen2ags.github.io/run-buddy/">
-                        <img src="assets\images\run-buddy.png" alt="">
+                        <img src="assets\images\run-buddy.png" alt=""  width="500" height="400">
+                    </a>
+                </article>    
+                <article class="small-tiles">
+                    <a href="https://jen2ags.github.io/robot-gladiators/">
+                        <img src="assets\Images\robot-gladiators.png" alt=""  width="500" height="400">
+                    </a>
+                    <a href="https://jen2ags.github.io/Module-01-Challenge/">
+                        <img src="assets\Images\challenge-01.png" alt=""  width="500" height="400">
                     </a>
                     
                 </article>
