images folder update

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
             <div>
                 <article class="large-tile">
                     <a href="https://jen2ags.github.io/Karaoke-Kings/">
-                        <img src="assets\images\Karaoke-kings screenshot.png" alt="" width="400" height="400">
+                        <img src="assets\Images\Karaoke-kings screenshot.png" alt="" width="400" height="400">
                     </a>
                 </article>
                 <article class="small-tiles">
                     <a href="https://jen2ags.github.io/Work-day-scheduler/">
-                        <img src="assets\images\work-day-scheduler screenshot.png" alt=""  width="150" height="300">
+                        <img src="assets\Images\work-day-scheduler screenshot.png" alt=""  width="150" height="300">
                     </a>
                     <a href="https://jen2ags.github.io/run-buddy/">
-                        <img src="assets\images\run-buddy.png" alt=""  width="150" height="300">
+                        <img src="assets\Images\run-buddy.png" alt=""  width="150" height="300">
                     </a>
                 </article>    
                 <article class="small-tiles">
