adding images and links to my work

--- a/index.html
+++ b/index.html
@@ -41,8 +41,16 @@
             <!--Tiles with my work-->
             <div>
                 <article class="large-tile">
+                    <a href="https://github.com/jen2ags/Med-Portal">
+                        <img src="assets/Images/MedPortal Main page.png" alt="" width="400" height="400">
+                    </a>
+                </article>
+                <article class="small-tiles">
                     <a href="https://jen2ags.github.io/Karaoke-Kings/">
-                        <img src="assets\Images\Karaoke-kings screenshot.png" alt="" width="400" height="400">
+                        <img src="assets\Images\Karaoke-kings screenshot.png" alt="" width="150" height="300">
+                    </a>
+                    <a href="https://github.com/jen2ags/Note-Taker">
+                        <img src="assets/Images/Note Taker main page.png" alt="" width="150" height="300">
                     </a>
                 </article>
                 <article class="small-tiles">
